Add travis configuration Fix makefile to follow the new go mod approach

--- a/Makefile.vars
+++ b/Makefile.vars
@@ -7,8 +7,8 @@ BUILD              := $(VERSION).$(HASH)
 BASE_DIR           := $(shell cd $(dir $(MAKEFILE)); pwd)
 REPO_DIR           := $(BASE_DIR)
 GOVERSION          := 1.11
-export GOCACHE     ?= off
-export GO111MODULE ?= off
+export GOCACHE     ?= on
+export GO111MODULE ?= on
 PKGS    	       := $(shell go list ./...)
 TEST_PKGS          ?=
 TESTS              ?= .
