--- a/Makefile.vars
+++ b/Makefile.vars
@@ -7,8 +7,9 @@ BUILD              := $(VERSION).$(HASH)
 BASE_DIR           := $(shell cd $(dir $(MAKEFILE)); pwd)
 REPO_DIR           := $(BASE_DIR)
 GOVERSION          := 1.11
-export GOCACHE     ?= on
-export GO111MODULE ?= on
+# export GOCACHE     ?= on
+# export GO111MODULE ?= on
+export GO111MODULE := on
 PKGS    	       := $(shell go list ./...)
 TEST_PKGS          ?=
 TESTS              ?= .
