--- a/Makefile.vars
+++ b/Makefile.vars
@@ -6,6 +6,7 @@ HASH               := $(shell git rev-parse --short HEAD)
 BUILD              := $(VERSION).$(HASH)
 BASE_DIR           := $(shell cd $(dir $(MAKEFILE)); pwd)
 REPO_DIR           := $(BASE_DIR)
+TMP_DIR            := $(BASE_DIR)/tmp
 GOVERSION          := 1.11
 # export GOCACHE     ?= on
 # export GO111MODULE ?= on
