Remove bad license file

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,10 @@ go:
     - 1.11.x
 
 cache:
-    - vendor
-    - on
-    - tmp
+    directories:
+        - vendor
+        - on
+        - tmp
 
 install: sudo make deps
 
