--- a/Makefile.vars
+++ b/Makefile.vars
@@ -22,9 +22,9 @@ ENV 		       ?= local
 ifeq ($(filter dev,$(MAKECMDGOALS)),dev)
 ENV                := dev
 endif
-ifeq ($(filter staging,$(MAKECMDGOALS)),staging)
-ENV                := staging
+ifeq ($(filter stg,$(MAKECMDGOALS)),stg)
+ENV                := stg
 endif
-ifeq ($(filter prod,$(MAKECMDGOALS)),prod)
-ENV                := prod
+ifeq ($(filter prd,$(MAKECMDGOALS)),prd)
+ENV                := prd
 endif
