Configure codecov to store coverage metrics Configure travis to push coverage metrics Add coverage metrics collector dependency

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ before_install: make docker
 
 script: make docker.ci
 
+after_success: make coverage.push
+
 notifications:
     email:
         on_success: change
