--- a/Makefile.vars
+++ b/Makefile.vars
@@ -8,23 +8,12 @@ BASE_DIR           := $(shell cd $(dir $(MAKEFILE)); pwd)
 REPO_DIR           := $(BASE_DIR)
 TMP_DIR            := $(BASE_DIR)/tmp
 GOVERSION          := 1.11
-# export GOCACHE     ?= on
 export GO111MODULE := on
 PKGS    	       := $(shell go list ./...)
-TEST_PKGS          ?=
+TEST_PKGS          := $(if $(TEST_PKGS),$(foreach pkg,$(TEST_PKGS),$(REPO)/$(pkg) ),$(PKGS))
 TESTS              ?= .
 COVERAGE_FILE      := $(NAME).coverage
 COVERAGE_PKG_FILE  := $(NAME).pkg.coverage
 COVERAGE_HTML      := $(NAME).coverage.html
 DOCKER_NAME        := e-pedion/$(NAME)
 DOCKER_FILE        := ./etc/docker/Dockerfile
-ENV 		       ?= local
-ifeq ($(filter dev,$(MAKECMDGOALS)),dev)
-ENV                := dev
-endif
-ifeq ($(filter stg,$(MAKECMDGOALS)),stg)
-ENV                := stg
-endif
-ifeq ($(filter prd,$(MAKECMDGOALS)),prd)
-ENV                := prd
-endif
