--- a/Makefile.vars
+++ b/Makefile.vars
@@ -16,4 +16,4 @@ COVERAGE_FILE      := $(NAME).coverage
 COVERAGE_PKG_FILE  := $(NAME).pkg.coverage
 COVERAGE_HTML      := $(NAME).coverage.html
 DOCKER_NAME        := e-pedion/$(NAME)
-DOCKER_FILE        := ./etc/docker/Dockerfile
+DOCKER_FILE        := ./Dockerfile
