--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,14 @@ sudo: true
 
 go:
     - 1.11.x
+    - 1.12.x
+    - 1.13.x
 
-install: sudo make deps
+install: sudo make codecov.install gotestsum.install
 
 script: make ci
 
-after_success: make coverage.push
+after_success: make codecov.push
 
 notifications:
     email:
