--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ go:
     - 1.12.x
     - 1.13.x
 
-install: OS=linux_amd64 sudo make codecov.install gotestsum.install
+install: OS=linux_amd64 TMP_DIR=/tmp sudo make codecov.install gotestsum.install
 
 script: make ci
 
